Fix #351
git-svn-id: https://build.archivesportaleurope.net/svn/apex-dpt/branches/DPT-project-1.2.0@291 87c78061-3d99-4f1f-8d5c-9a005f5ba2cf